--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ramsey/uuid": "^4.2",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
@@ -15,6 +16,7 @@
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "mockery/mockery": "^1.4",
         "phpunit/phpunit": "^9.5",
         "symfony/phpunit-bridge": "^6.0"
     },
