--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,18 +53,6 @@ services:
       - target: 443
         published: 443
         protocol: udp
-
-  mysql:
-    image: mysql:8.0
-    command: --default-authentication-plugin=mysql_native_password
-    volumes:
-      - "./etc/ci/mysql:/etc/mysql/conf.d"
-    tmpfs:
-      - /var/lib/mysql/:rw,noexec,nosuid,size=600m
-      - /tmp/:rw,noexec,nosuid,size=50m
-    environment:
-      - MYSQL_ROOT_PASSWORD=${POSTGRES_USER:-symfony}
-      - MYSQL_DATABASE=${POSTGRES_PASSWORD:-ChangeMe}
   
   rabbitmq:
     image: rabbitmq:3-management
@@ -74,9 +62,21 @@ services:
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS:-ChangeMe}
       RABBITMQ_DEFAULT_VHOST: "/"
   
+  database:
+    image: postgres:${POSTGRES_VERSION:-13}-alpine
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-app}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-ChangeMe}
+      POSTGRES_USER: ${POSTGRES_USER:-symfony}
+    volumes:
+      - db-data:/var/lib/postgresql/data:rw
+  
 # Mercure is installed as a Caddy module, prevent the Flex recipe from installing another service
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
+
+###> doctrine/doctrine-bundle ###
+###< doctrine/doctrine-bundle ###
 
 volumes:
   php_socket:
@@ -84,3 +84,7 @@ volumes:
   caddy_config:
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
+
+###> doctrine/doctrine-bundle ###
+  db-data:
+###< doctrine/doctrine-bundle ###
