--- a/src/Module/Todo/Infrastructure/DependencyInjection/config/application.yaml
+++ b/src/Module/Todo/Infrastructure/DependencyInjection/config/application.yaml
@@ -3,4 +3,11 @@ services:
         tags: [ { name: messenger.message_handler, bus: command.bus } ]
         autoconfigure: false
         arguments:
-          - '@App\Module\Todo\Infrastructure\Persistence\MysqlTodoRepository'
+            - '@App\Module\Todo\Infrastructure\Persistence\MysqlTodoRepository'
+    
+    App\Module\Todo\Application\Update\MarkTodoAsDoneCommandHandler:
+        tags: [ { name: messenger.message_handler, bus: command.bus } ]
+        autoconfigure: false
+        arguments:
+            - '@App\Module\Todo\Infrastructure\Persistence\MysqlTodoRepository'
+            - '@App\Module\Todo\Infrastructure\Time\SystemTimeProvider'
