--- a/src/Module/Todo/Infrastructure/DependencyInjection/config/infrastructure.yaml
+++ b/src/Module/Todo/Infrastructure/DependencyInjection/config/infrastructure.yaml
@@ -2,3 +2,5 @@ services:
     App\Module\Todo\Infrastructure\Persistence\MysqlTodoRepository:
         arguments:
             $entityManager: '@doctrine.orm.entity_manager'
+
+    App\Module\Todo\Infrastructure\Time\SystemTimeProvider:
